fixed button spacing in css file

--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,8 @@ article img {
 
 .newsletter form {
   margin-top: 1rem;
+  justify-content: center;
+  display:flex;
 }
 
 .form-group input {
@@ -199,7 +201,6 @@ article img {
   border-radius: 5px;
   padding: 0.5rem 1rem;
   cursor: pointer;
-  margin: 1rem;
 }
 
 .message {
